--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header flex space-between">
             <div class="h-logo">
                 <img src="./images/logo.png" alt="">
-                <a href="" class="ml-20">EdddN</a>
+                <a href="" class="ml-20">EN</a>
             </div>
             <div class="h-main">
                 <div class="hm-search flex">
