--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./css/mycss2.0.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>Belzioo Shop</title>
 </head>
 
@@ -64,6 +65,22 @@
 
                         <div class="user-menu none">
                             <ul>
+
+                                <li>
+                                    <ul class="mobile-user-menu none">
+                                        <li>
+                                            <a href="" class="bx bx-heart"></a>
+                                        </li>
+                                        <li>
+                                            <a href="" class="bx bx-bell"></a>
+                                        </li>
+                                        <li>
+                                            <a href="" class="bx bx-shopping-bag"></a>
+                                            <span class="hmu-badge">2</span>
+                                            <span class="hmu-new"></span>
+                                        </li>
+                                    </ul>
+                                </li>
                                 <li><a href="">Acount</a></li>
                                 <li><a href="">Help</a></li>
                                 <li><a href="">News</a></li>
@@ -76,22 +93,22 @@
         </div>
     </header>
 
-    <div class="main flex">
+    <div class="main flex space-between">
         <div class="explore">
             <div class="header-main">
                 <div>
-                    <span class="fc-white fs-17 ff-Sans-bold pl-25">Explore</span>
+                    <span class="explore-title fc-white fs-17 ff-Sans-bold pl-25">Explore</span>
 
                     <a href="" class="category-btn">
                         <div>
                             <i class='bx bxs-category-alt mr-10'></i>
-                            <span>Categories</span>
+                            <span class="cat-span">Categories</span>
                         </div>
-                        <i class="bx bx-chevron-right bx-xs"></i>
+                        <i class=" cat-chevron bx bx-chevron-right bx-xs"></i>
                     </a>
 
 
-                    <ul class="hm-menu">
+                    <ul class="hm-menu hmm-bot">
                         <li>
                             <a href="" class="fc-white core-v">
                                 <i class='bx bxs-offer mr-15'></i>
@@ -149,10 +166,10 @@
                         </div>
                         <div class="sshl-titles relative">
                             <span class="mb-15">____ Special offers</span>
-                            <h1 class="fs-30 ff-Sans-bold">Men's T-Shitrs</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dolore </p>
+                            <h1 class="fs-30 ff-Sans-bold sshl-h1">Men's T-Shitrs</h1>
+                            <p class="sshl-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dolore </p>
     
-                            <ul class="mt-15">
+                            <ul class="mt-15 sshl-ul">
                                 <li><img src="./images/FILA.png" alt=""></li>
                                 <li><img src="./images/Adidas.png" alt=""></li>
                                 <li><img src="./images/Nike.png" alt=""></li>
