--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <div class="user-menu none">
                             <ul>
 
-                                <li>
-                                    <ul class="mobile-user-menu none">
+                                <li class="mobile-user-menu none">
+                                    <ul class="mobile-user-menu-ul">
                                         <li>
                                             <a href="" class="bx bx-heart"></a>
                                         </li>
